# aw-watcher-project

./: .buildinfo  .cruft.json  .gitmodules  Dockerfile  MANIFEST.in  README.md  conf.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sitemap.xml  tutorial.html
.github/workflows/: automerge.yml  docs.yml  package.yml  template-update.yml
_modules/: index.html
_modules/aw_watcher_project/: app.html  autostart.html  aw_time.html  config.html  exc.html  get_activity.html  get_time_spent.html  gui.html
_modules/aw_watcher_project/events/: activity.html  base.html  project.html  window.html
_sources/: index.rst.txt  tutorial.rst.txt
_sources/api/: aw_watcher_project.events.rst.txt  aw_watcher_project.rst.txt  modules.rst.txt
api/: aw_watcher_project.events.html  aw_watcher_project.html  modules.html
auto_examples/: index.html
aw_watcher_project/: __init__.py  __main__.py  app.py  autostart.py  aw_time.py  config.py  events.py  exc.py  get_activity.py  get_time_spent.py  gui.py  logger.py
aw_watcher_project/assets/: aw-watcher-project.desktop
aw_watcher_project/events/: activity.py  base.py  project.py  window.py
binder/: requirements.txt
docsrc/: Makefile
docsrc/source/: index.rst  tutorial.rst
tests/: test_gui.py
