[tool.poetry]
name = "aw-watcher-project"
version = "0.1.0"
description = "System tray app for ActivityWatch to report current project"
authors = ["Nick DeRobertis <whoopnip@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
# Dependencies of aw-core, not sure why but these had to be added
# https://github.com/ActivityWatch/aw-core/blob/master/pyproject.toml
jsonschema = "^3.1"
peewee = "3.*"
appdirs = "^1.4.3"
iso8601 = "^0.1.12"
python-json-logger = "^0.1.11"
TakeTheTime = "^0.3.1"
pymongo = {version = "^3.10.0", optional = true}
strict-rfc3339 = "^0.7"
timeslot = {git = "https://github.com/ErikBjare/timeslot.git"}
# Direct dependencies
python = ">=3.6,<3.10"
tzlocal = "^2.1"
aw-client = {path = "./aw-client"}
PyYAML = "^5.4.1"
PySide6 = "^6.0.1"
Pillow = "^8.1.0"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
Sphinx = "^3.4.3"
sphinx-autobuild = "^2020.9.1"
sphinx-autodoc-typehints = "^1.11.1"
sphinxcontrib-fulltoc = "^1.2.0"
sphinx-paramlinks = "^0.5.0"
sphinx-rtd-theme = {git = "https://github.com/readthedocs/sphinx_rtd_theme.git"}
sphinx-gallery = "^0.8.2"
sphinx-copybutton = "^0.3.1"
sphinx-sitemap = "^2.2.0"
twine = "^3.3.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
mypy = "^0.800"
pypandoc = "^1.5"
cruft = "^2.6.1"


[build-system]
requires = ["setuptools>=41.0", "setuptools-scm", "wheel", "conf", "version"]
build-backend = "setuptools.build_meta"
